--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
   .formNav {
     grid-column: 1 / span 2;
-    max-width: 95%;
-    margin: auto;
-    padding: 90px;
+    /* max-width: 95%;
+    margin: auto; */
+    padding: 10px;
   }
 
   input[type=text], select, textarea {
@@ -21,21 +21,6 @@
     margin-bottom: 16px; /* Bottom margin */
     resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
   }
-  
-  /* Style the submit button with a specific background color etc */
-  /* input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  } */
-  
-  /* When moving the mouse over the submit button, add a darker green color */
-  /* input[type=submit]:hover {
-    background-color: #45a049;
-  } */
   
   /* Add a background color and some padding around the form */
   .container {
