--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
   .formNav {
     grid-column: 1 / span 2;
-    /* max-width: 95%;
-    margin: auto; */
+    /* max-width: 95%; */
+    /* margin: auto; */
     padding: 10px;
   }
 
