--- a/style.css
+++ b/style.css
@@ -372,6 +372,11 @@
         margin-right: auto;
       }
 
+      .contact {
+        width: min(80vw, 585px);
+        height: 970px;
+    }
+
   }
 
   @media screen and (max-width: 600px) {
