--- a/style.css
+++ b/style.css
@@ -74,12 +74,12 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
+    background-color: rgba(0,0,0, 0.8);
     overflow-x: hidden;
     transition: 0.5s;
     display:flex;
     justify-content:center;
+    backdrop-filter: blur(10px);
   }
 
   :root {
